deploy/dmm/backend.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dmm-backend
  namespace: dmm
spec:
  selector:
    app: dmm-backend
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
