deploy/dmm/frontend.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dmm-frontend
  namespace: dmm
spec:
  selector:
    app: dmm-frontend
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
